# sea25_sourcecode

./: CMakeLists.txt  README.md  main.cpp
data/: mini_sample_file.txt
include/: buff_vector.h  edit_gram.h  ext_gram.h  grammar.h  grammar_algorithms.h  merge_grams.h  partial_gram.h
include/build_gram/: collapse_gram.h  lc_parsing.h  phrase_set.h  plain_gram.h  text_handler.h
include/cds/: bitstream.h  cdt_common.hpp  int_array.h  int_decoders.h  memory_handler.hpp  mmap_allocator.h  ts_priority_queue.h  ts_queue.h  ts_string_map.h  utils.h  vbyte_encoding.h
lib/: cdt_common.cpp  utils.cpp
